# LLM-Safety-Course

./: .gitignore  README.md  tutorial.md
2026-Assignments/02-Jailbreak/SX2516056-王亚东-Jailbreak/SX2516056-王亚东/: README.md  RESPONSIBLE_USE.md  pyproject.toml  requirements.txt
2026-Assignments/02-Jailbreak/SX2516056-王亚东-Jailbreak/SX2516056-王亚东/configs/: default.yaml
2026-Assignments/02-Jailbreak/SX2516056-王亚东-Jailbreak/SX2516056-王亚东/data/public_samples/: README.md  manual_review_template.csv
2026-Assignments/02-Jailbreak/SX2516056-王亚东-Jailbreak/SX2516056-王亚东/outputs/mock_private/: Baseline_harmful.jsonl  Direct_NoDefense_benign.jsonl  GCG_LlamaGuard3_harmful.jsonl  GCG_Perplexity_harmful.jsonl  GCG_SmoothLLM_harmful.jsonl  GCG_style_harmful.jsonl  LlamaGuard3Defense_benign.jsonl  PAIR_LlamaGuard3_harmful.jsonl  PAIR_Perplexity_harmful.jsonl  PAIR_SmoothLLM_harmful.jsonl  PAIR_style_harmful.jsonl  PerplexityDefense_benign.jsonl  SmoothLLMDefense_benign.jsonl  mock_eval_rows.jsonl
2026-Assignments/02-Jailbreak/SX2516056-王亚东-Jailbreak/SX2516056-王亚东/outputs/public_report/: README_MOCK_RESULTS.md  attack_curve.csv  metrics.csv  metrics.md  mock_case_studies.md  mock_comparison_table.md
2026-Assignments/02-Jailbreak/SX2516056-王亚东-Jailbreak/SX2516056-王亚东/report/: SX2516056-王亚东-Jailbreak.md
2026-Assignments/02-Jailbreak/SX2516056-王亚东-Jailbreak/SX2516056-王亚东/scripts/: 00_prepare_data.py  01_run_baseline.py  02_run_pair.py  03_run_gcg.py  04_eval_defense.py
2026-Assignments/02-Jailbreak/SX2516056-王亚东-Jailbreak/SX2516056-王亚东/src/jailbreak_lab/: data.py  defenses.py  (+6 more)
(+290 files in other folders)
