[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jailbreak-lab"
version = "0.1.0"
description = "Course project for LLM jailbreak attack and defense evaluation with safety redaction."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
